# xcc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/xcc/: ast.h  codegen.h  exceptions.h  jit.h  lexer.h  parser.h  xcc.h
include/xcc/ast/: assign.h  binary.h  block.h  call.h  cast.h  fndecl.h  fndef.h  for.h  identifier.h  if.h  member.h  node.h  number.h  return.h  string.h  struct.h  subscript.h  type.h  typed_identifier.h  unary.h  vardecl.h  while.h
include/xcc/meta/: binops.h  function.h  type.h  value.h
include/xcc/util/: llvm.h  log.h  ordered_map.h  prefix_tree.h  string.h
src/: ast.cc  codegen.cc  jit.cc  lexer.cc  main.cc  parser.cc  xcc.cc
src/ast/: assign.cc  binary.cc  block.cc  call.cc  cast.cc  fndecl.cc  fndef.cc  for.cc  identifier.cc  if.cc  member.cc  node.cc  number.cc  return.cc  string.cc  struct.cc  subscript.cc  type.cc  typed_identifier.cc  unary.cc  vardecl.cc  while.cc
src/meta/: binops.cc  function.cc  type.cc  value.cc
src/util/: llvm.cc  log.cc  string.cc
tests/: 1.txt  10.txt  11.txt  12.txt  13.xc  14.txt  15.xc  16.xc  17.xc  18.txt  19.xc  2.txt  20.txt  21.txt  22.txt  22.xc  23.txt  24.xc  25.txt  26.txt  27.txt  3.xc  4.txt  5.txt  6.txt  7.txt  8.xc  9.txt  testrun.py  testrun.sh  tests.json
